chore(deps): upgrade to nimbus v9.31
(cherry picked from commit 9f82c6f1b7b13e795a743586c2da96d08587c8b2)